--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,15 +27,20 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activities.QuickMenuActivity"
-            android:launchMode="singleTask"
-            android:screenOrientation="sensorPortrait">
+            android:name=".activities.SplashScreenActivity"
+            android:noHistory="true"
+            android:screenOrientation="sensorPortrait"
+            android:theme="@android:style/Theme.NoDisplay">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activities.QuickMenuActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="sensorPortrait"/>
         <activity
             android:name=".activities.AppointmentCalendarActivity"
             android:launchMode="singleTask"
@@ -88,5 +93,4 @@
             android:screenOrientation="sensorPortrait"
             android:theme="@style/Theme.AppCompat.NoActionBar"/>
     </application>
-
 </manifest>
