--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,4 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 
+app/src/main/java/ie/teamchile/smartapp/util/NotKeys.java
