--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
     compile 'com.daimajia.swipelayout:library:1.2.0@aar'
+    compile 'net.hockeyapp.android:HockeySDK:3.5.0'
 }
