integrate hockey app to check for crash reports at LoginActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest package="ie.teamchile.smartapp"
           xmlns:android="http://schemas.android.com/apk/res/android"
-          android:versionCode="2"
-          android:versionName="1.1">
-
-    <uses-sdk
-        android:minSdkVersion="16"
-        android:targetSdkVersion="22"/>
+          android:versionCode="3"
+          android:versionName="1.1.1">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.CALL_PHONE"/>
@@ -22,12 +18,14 @@
     <uses-permission android:name="android.permission.CLEAR_APP_CACHE"/>
     <uses-permission android:name="android.permission.VIBRATE" />
 
-    <!-- android:name=".maiti.MaitiApplication" //this goes between application tags -->
     <application
         android:allowBackup="false"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
+
+        <activity android:name="net.hockeyapp.android.UpdateActivity" />
+
         <activity
             android:name=".activities.SplashScreenActivity"
             android:noHistory="true"
