--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,7 +59,7 @@
             android:launchMode="singleTask"
             android:screenOrientation="sensorLandscape"/>
         <activity
-            android:name=".activities.LoginActivity"
+            android:name=".activities.Login.LoginActivity"
             android:label="@string/app_name"
             android:noHistory="true"
             android:screenOrientation="sensorPortrait"
