move AppointmentCalendarActivity to its own package. Add MVP interfaces/classes to package

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
             android:launchMode="singleTask"
             android:screenOrientation="sensorPortrait"/>
         <activity
-            android:name=".activities.AppointmentCalendarActivity"
+            android:name=".activities.AppointmentCalendar.AppointmentCalendarActivity"
             android:launchMode="singleTask"
             android:screenOrientation="sensorPortrait"/>
         <activity
