create AppointmentTypeSpinner package, create empty MVP for AppointmentTypeSpinnerActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
             android:launchMode="singleTask"
             android:screenOrientation="sensorPortrait"/>
         <activity
-            android:name=".activities.AppointmentTypeSpinnerActivity"
+            android:name=".activities.AppointmentTypeSpinner.AppointmentTypeSpinnerActivity"
             android:screenOrientation="sensorPortrait"/>
         <activity
             android:name=".activities.ClinicTimeRecordActivity"
