update gradle to enable proguard on release builds

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,17 +14,19 @@ android {
         targetSdkVersion 23
         versionCode 7
         versionName "1.1.5"
+        resConfigs "en"
+        //resConfigs "xxxhdpi"
     }
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             buildConfigField "retrofit.RestAdapter.LogLevel", "RETROFIT_LOG_LEVEL", "retrofit.RestAdapter.LogLevel.NONE"
         }
 
         debug {
-            zipAlignEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             buildConfigField "retrofit.RestAdapter.LogLevel", "RETROFIT_LOG_LEVEL", "retrofit.RestAdapter.LogLevel.FULL"
         }
     }
