comment out apk split code in gradle

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,14 +31,14 @@ android {
         }
     }
 
-    splits {
+    /*splits {
         abi {
             enable true
             reset()
             include 'x86', 'armeabi', 'armeabi-v7a', 'mips'
             universalApk false
         }
-    }
+    }*/
 }
 
 dependencies {
